--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview
 </h2>
 
-<p>The purpose of this page is to show the EcoSIS API (Application Programming Interface) specification and how it can be used to develop 3rd applications and tools using EcoSIS.  The EcoSIS API is a <a href="http://rest.elkstein.org/" target="_blank">REST</a> based API with all calls over HTTP.</p>
+<p>The purpose of this page is to show the EcoSIS API (Application Programming Interface) specification and how it can be used to develop 3rd party applications and tools using EcoSIS.  The EcoSIS API is a <a href="http://rest.elkstein.org/" target="_blank">REST</a> based API with all calls over HTTP.</p>
 
 <p>The EcoSIS API is broken into four parts:</p>
   <ul>
