--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>EcoSIS API</h1>
+        <h1>EcoSIS API (Alpha)</h1>
         <p>Ecological Spectral Information System (EcoSIS)</p>
 
         <p class="view"><a href="https://github.com/CSTARS/esis">View the Project on GitHub <small>CSTARS/esis</small></a></p>
@@ -53,6 +53,12 @@
 
       </header>
       <section>
+
+<h2>
+  Alpha (v0.3.1)
+</h2>
+
+<p><i>Please note<i>.  This API is currently in early alpha.  All API's are subject to change.  And Bugs.  Please create issues for any bugs you find <a href="https://github.com/CSTARS/esis/issues" target="_blank">here</a></p>
         
 <h2>
   <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview
