another quick fix

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   Alpha (v0.3.1)
 </h2>
 
-<p><i>Please note</i>.  This API is currently in early alpha.  All API's are subject to change.  And Bugs.  Please create issues for any bugs you find <a href="https://github.com/CSTARS/esis/issues" target="_blank">here</a></p>
+<p><i>Please note</i>.  This API is currently in early alpha.  All API's are subject to change.  And bugs.  Please create issues for any bugs you find <a href="https://github.com/CSTARS/esis/issues" target="_blank">here</a>.</p>
         
 <h2>
   <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span class="octicon octicon-link"></span></a>Overview
