--- a/search/app/index.html
+++ b/search/app/index.html
@@ -1,129 +1,131 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-  	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	
-	<title>Ecosis - Spectral Library</title>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-	<!-- build:js scripts/build.js -->
-	<script src="bower_components/platform/platform.js"></script>
-	<script src="bower_components/jquery/dist/jquery.js"></script>
-	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-	<script src="bower_components/handlebars/handlebars.js"></script>
-	<script src="bower_components/js-md5/js/md5.js"></script>
+  <title>Ecosis - Spectral Library</title>
 
-	<script type="text/javascript" src="js/app.js"></script>
-	<script type="text/javascript" src="js/search.js"></script>
-	<script type="text/javascript" src="js/home.js"></script>
-	<script type="text/javascript" src="js/result.js"></script>
-	<script type="text/javascript" src="js/chart.js"></script>
-	<script type="text/javascript" src="js/compare.js"></script>
-	<script type="text/javascript" src="js/group.js"></script>
-	<!-- endbuild -->
-
-	<link href="css/deep.css" rel="stylesheet" shim-shadowdom />
-
-	<!-- build:css css/build.css -->
-	<link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
-	<link href="css/style.css" rel="stylesheet">
-	<!-- endbuild -->
+  <!-- build:js scripts/build.js -->
+  <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+  <script src="bower_components/jquery/dist/jquery.js"></script>
+  <script src="bower_components/bootswatch-dist/js/bootstrap.js"></script>
+  <script src="bower_components/handlebars/handlebars.js"></script>
+  <script src="bower_components/js-md5/js/md5.js"></script>
 
 
-	<script type="text/javascript" src="mqe/mqe.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
+  <script type="text/javascript" src="js/search.js"></script>
+  <script type="text/javascript" src="js/home.js"></script>
+  <script type="text/javascript" src="js/result.js"></script>
+  <script type="text/javascript" src="js/chart.js"></script>
+  <script type="text/javascript" src="js/compare.js"></script>
+  <script type="text/javascript" src="js/group.js"></script>
+  <!-- endbuild -->
 
-	<link rel="import" href="elements.html">
+  <script type="text/javascript">
+    $.get("/schema.json", function(resp) {
+      ESIS.schema = resp;
+    });
+  </script>
 
-	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-	<script type="text/javascript">
+  <!-- build:css css/build.css -->
+  <link href="bower_components/bootswatch-dist/css/bootstrap.css" rel="stylesheet" />
+  <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <link href="css/style.css" rel="stylesheet">
+  <!-- endbuild -->
+
+
+  <script type="text/javascript" src="mqe/mqe.js"></script>
+
+  <link rel="import" href="elements.html">
+
+  <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+  <script type="text/javascript">
       google.load('visualization', '1', {packages: ['corechart']});
       google.setOnLoadCallback(initchart);
     </script>
-	
-	<!--
-	<script type="text/javascript">
-		$(window).ready(function(){
-			
-			$("#accordion2").collapse();
-			$("#accordion2").height("auto");
-		});
-	</script>
-	-->
+
+  <!--
+  <script type="text/javascript">
+    $(window).ready(function(){
+
+      $("#accordion2").collapse();
+      $("#accordion2").height("auto");
+    });
+  </script>
+  -->
 
 </head>
 <body>
 
 <div id="home" style="display:none; padding:2% 6%">
-	<div class="jumbotron">
-	  <h1 style="text-shadow: 2px 2px 0px white"><i class="fa fa-leaf"></i> EcoSIS Spectral Library <span class="sandbox">Sandbox</span></h1>
-	  <p>Welcome to the EcoSIS Spectral Library, a useful tool for finding spectral data</p>
-	  <p><a href="/#search" class="btn btn-primary btn-lg" role="button"><i class="fa fa-search"></i>  Find Spectra</a></p>
-	</div>
+  <div class="jumbotron">
+    <h1 style="text-shadow: 2px 2px 0px white"><i class="fa fa-leaf"></i> EcoSIS Spectral Library <span class="sandbox">Sandbox</span></h1>
+    <p>Welcome to the EcoSIS Spectral Library, a useful tool for finding spectral data</p>
+    <p><a href="/#search" class="btn btn-primary btn-lg" role="button"><i class="fa fa-search"></i>  Find Spectra</a></p>
+  </div>
 
-	<div style="margin-top:30px; text-align:center">
-		Data maintainers, <a id="mainainerLink" href="http://data.ecospectra.org">Enter Here</a>
-	</div>
-	
+  <div style="margin-top:30px; text-align:center">
+    Data maintainers, <a id="mainainerLink" href="http://data.ecospectra.org">Enter Here</a>
+  </div>
+
 </div>
 
 <div id="search" style="display:none; padding:2% 6%">
-	<div class="page-header" style="margin:0px">
-		<div class="row">
-			<div class="col-md-9">
-				<h4>EcoSIS Spectral Library <span class="sandbox">Sandbox</span></h4>
-			</div>
-			<div class="col-md-3">
-				<a class='btn btn-primary pull-right' href="/#home" style="margin:5px">
-					<i class="fa fa-home"></i> Home
-				</a>
-			</div>
-		</div>
-	</div>
-	
+  <div class="page-header" style="margin:0px">
+    <div class="row">
+      <div class="col-md-9">
+        <h4>EcoSIS Spectral Library <span class="sandbox">Sandbox</span></h4>
+      </div>
+      <div class="col-md-3">
+        <a class='btn btn-primary pull-right' href="/#home" style="margin:5px">
+          <i class="fa fa-home"></i> Home
+        </a>
+      </div>
+    </div>
+  </div>
 
-	<div class="well form-search">
-		<div class="row">
-			<div class="col-md-5" >
-				<div class="input-group" style="max-width: 300px">
-				  <input id="search-text" type="text" class="form-control"  >
-				  <span class="input-group-btn">
-			        <button id="search-btn" class="btn btn-default" type="button"><i class="fa fa-search"></i> Search</button>
-			      </span>
-				</div>
-			</div>
-			<div class="col-md-6" id="active-filters"></div>
-		</div>
-	</div>
 
-	
-	<div class="row">
-		<div class="col-md-3">
-			<div class="well" style="overflow:hidden">
-				<ul class="nav nav-list" id="filter-nav"></ul>
-			</div>
-			<div class="well" style="display:none">
-				<ul class="nav nav-list" id="compare-list"></ul>
-			</div>
-		</div>
-		<div class="col-md-9">
-			<div class="page-header" style="margin:10px 0 0 0">
-					<div class="row">
-						<div class="col-md-6">
-							<h4 id="results-title">Search Results</h4>
-						</div>
-						<div class="col-md-6">
-							<ul id="search-paging-btns" class="pagination pull-right" style="margin:0px"></ul>
-						</div>
-					</div>
-			</div>
-			<div id="results-panel"></div>
-		</div>
-	</div>
+  <div class="well" style="background-color: #eee">
+    <div class="row">
+      <div class="col-md-5" >
+        <input id="search-text" type="text" class="form-control" placeholder="Keywords" style="background-color: white; max-width: 300px; display:inline-block;" >
+        <button id="search-btn" class="btn btn-default" type="button"><i class="fa fa-search"></i> Search</button>
+      </div>
+      <div class="col-md-6" id="active-filters" style="padding: 10px 0"></div>
+    </div>
+  </div>
 
-	<div id="search-footer" style="text-align:center;margin-top: 100px;padding-top: 20px; border-top:1px solid #eee">
-		<div id="current-search-rest-link"></div>
-	</div>
+
+  <div class="row">
+    <div class="col-md-3">
+      <div class="well" style="overflow:hidden; background-color: #eee">
+        <ul class="nav nav-list" id="filter-nav"></ul>
+      </div>
+      <div class="well" style="display:none" style="background-color: #eee">
+        <ul class="nav nav-list" id="compare-list"></ul>
+      </div>
+    </div>
+    <div class="col-md-9">
+      <div class="page-header" style="margin:10px 0 0 0">
+          <div class="row">
+            <div class="col-md-6">
+              <h4 id="results-title">Search Results</h4>
+            </div>
+            <div class="col-md-6">
+              <ul id="search-paging-btns" class="pagination pull-right" style="margin:0px"></ul>
+            </div>
+          </div>
+      </div>
+      <div id="results-panel"></div>
+    </div>
+  </div>
+
+  <div id="search-footer" style="text-align:center;margin-top: 100px;padding-top: 20px; border-top:1px solid #eee">
+    <div id="current-search-rest-link"></div>
+  </div>
 
 </div>
 
@@ -131,55 +133,55 @@
 
 
 <div id="compare" style="display:none">
-	<div class="row">
-		<div class="col-md-9">
-			<h2>Compare</h2>
-		</div>
-		<div class="col-md-3" style="height:40px;padding-top:10px;">
-			<a class='btn btn-primary pull-right' href="/#home" style="margin:5px"><i class="icon-home icon-white"></i> Home</a>
-			<a id="compare-back-btn" class="btn btn-primary pull-right" style="margin:5px"><i class="icon-search icon-white"></i> Back to Search</a>
-		</div>
-	</div>
-	<div id="compare-chart"></div>
-	<div id="compare-list-btns"></div>
+  <div class="row">
+    <div class="col-md-9">
+      <h2>Compare</h2>
+    </div>
+    <div class="col-md-3" style="height:40px;padding-top:10px;">
+      <a class='btn btn-primary pull-right' href="/#home" style="margin:5px"><i class="icon-home icon-white"></i> Home</a>
+      <a id="compare-back-btn" class="btn btn-primary pull-right" style="margin:5px"><i class="icon-search icon-white"></i> Back to Search</a>
+    </div>
+  </div>
+  <div id="compare-chart"></div>
+  <div id="compare-list-btns"></div>
 </div>
 
 <div id="group" style="display:none; padding:2% 6%">
-	<h2 id="group-header" class="page-header"></h2>
-	<div style="height: 40px">
-		<div class="pull-right">
-			<a class="btn btn-primary" id="group-back-search">Back to Search</a>
-			<a class="btn btn-primary" id="group-back-spectra">Back to Spectra</a>
-		</div>
-	</div>
-	<div id="group-chart"></div>
-	<div id="group-link" style="text-align:center;margin-bottom:15px"></div>
-	<div id="group-controls" style="text-align:center">
-		<a id="group-prev" class="btn btn-primary">Previous</a>
-		<select id="group-select" style="margin-bottom:0px;width:auto"></select>
-		<a id="group-next" class="btn btn-primary">Next</a>
+  <h2 id="group-header" class="page-header"></h2>
+  <div style="height: 40px">
+    <div class="pull-right">
+      <a class="btn btn-primary" id="group-back-search">Back to Search</a>
+      <a class="btn btn-primary" id="group-back-spectra">Back to Spectra</a>
+    </div>
+  </div>
+  <div id="group-chart"></div>
+  <div id="group-link" style="text-align:center;margin-bottom:15px"></div>
+  <div id="group-controls" style="text-align:center">
+    <a id="group-prev" class="btn btn-primary">Previous</a>
+    <select id="group-select" style="margin-bottom:0px;width:auto"></select>
+    <a id="group-next" class="btn btn-primary">Next</a>
 
-		<div id="group-loading">Loading...</div>
-	</div>
+    <div id="group-loading">Loading...</div>
+  </div>
 </div>
 
 <div id="loading" style="display:none;position:fixed;top:50px;text-align:center;width:100%;" class="animated flipInX">
-	<div class="alert alert-info" style="display:inline-block;box-shadow: 0 0 5px white">Loading...</div>
+  <div class="alert alert-info" style="display:inline-block;box-shadow: 0 0 5px white">Loading...</div>
 </div>
 
 <div id="gitInfo" style="padding:30px; color: #888; font-size: 12px; font-style: italic"></div>
 <script>
-	$.get('/rest/gitInfo', function(resp){
-		var html = '';
-		if( resp && resp.branch == 'master' ) return;
-		for( var key in resp ) html += '<div><b>'+key+':</b> '+resp[key]+'</div>';
-		$('#gitInfo').html(html);
-	});
+  $.get('/rest/gitInfo', function(resp){
+    var html = '';
+    if( resp && resp.branch == 'master' ) return;
+    for( var key in resp ) html += '<div><b>'+key+':</b> '+resp[key]+'</div>';
+    $('#gitInfo').html(html);
+  });
 
-	if( window.location.hostname == 'dev-search.ecospectra.org' ) {
-		$('.sandbox').show();
-		$('#mainainerLink').attr('href','http://dev-data.ecospectra.org');
-	}
+  if( window.location.hostname == 'dev-search.ecospectra.org' ) {
+    $('.sandbox').show();
+    $('#mainainerLink').attr('href','http://dev-data.ecospectra.org');
+  }
 </script>
 <script src="/analytics"></script>
 
