--- a/search/app/index.html
+++ b/search/app/index.html
@@ -13,6 +13,7 @@
   <script src="bower_components/bootswatch-dist/js/bootstrap.js"></script>
   <script src="bower_components/handlebars/handlebars.js"></script>
   <script src="bower_components/js-md5/js/md5.js"></script>
+  <script src="bower_components/bower-bootstrap-slider/js/bootstrap-slider.js"></script>
 
 
   <script type="text/javascript" src="js/app.js"></script>
@@ -33,6 +34,7 @@
   <!-- build:css css/build.css -->
   <link href="bower_components/bootswatch-dist/css/bootstrap.css" rel="stylesheet" />
   <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet" />
+  <link href="bower_components/bower-bootstrap-slider/css/slider.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet">
   <!-- endbuild -->
 
