--- a/search/app/elements.html
+++ b/search/app/elements.html
@@ -2,3 +2,4 @@
 
 <link rel="import" href="elements/layout.html">
 <link rel="import" href="elements/esis-spectra-viewer.html">
+<link rel="import" href="elements/esis-data-downloader.html">
