--- a/search/app/index.html
+++ b/search/app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Ecosis - Spectral Library</title>
+  <title>EcoSIS - Spectral Library</title>
 
   <!-- build:js scripts/build.js -->
   <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
