adding new build, adding updates for new backend

--- a/search/app/index.html
+++ b/search/app/index.html
@@ -63,7 +63,7 @@
 <body>
 
 <div id="home" style="display:none; padding:2% 6%">
-  <div class="jumbotron">
+  <div class="jumbotron" style="text-align:center">
     <h1 style="text-shadow: 2px 2px 0px white"><i class="fa fa-leaf"></i> EcoSIS Spectral Library <span class="sandbox">Sandbox</span></h1>
     <p>Welcome to the EcoSIS Spectral Library, a useful tool for finding spectral data</p>
     <p><a href="/#search" class="btn btn-primary btn-lg" role="button"><i class="fa fa-search"></i>  Find Spectra</a></p>
@@ -94,7 +94,7 @@
     <div class="row">
       <div class="col-md-5" >
         <input id="search-text" type="text" class="form-control" placeholder="Keywords" style="background-color: white; max-width: 300px; display:inline-block;" >
-        <button id="search-btn" class="btn btn-default" type="button"><i class="fa fa-search"></i> Search</button>
+        <button id="search-btn" class="btn btn-default" type="button" style="margin-top:-5px"><i class="fa fa-search"></i> Search</button>
       </div>
       <div class="col-md-6" id="active-filters" style="padding: 10px 0"></div>
     </div>
