bug fixes, ui tweaks

--- a/search/app/elements/esis-spectra-viewer.html
+++ b/search/app/elements/esis-spectra-viewer.html
@@ -78,6 +78,9 @@
     },
 
     resetSlider : function() {
+      this.absoluteMax = this.maxWavelength;
+      this.absoluteMin = this.minWavelength;
+
       this.$.sliderRoot.innerHTML = '<input type="text" data-slider-min="'+this.minWavelength+'" data-slider-max="'+this.maxWavelength+
           '" data-slider-step="1" data-slider-value="['+this.minWavelength+','+this.maxWavelength+']" id="slider" />';
       this.$.slider = this.$.sliderRoot.querySelector('#slider');
@@ -295,11 +298,11 @@
 
         } else {
             var changed = false;
-            if( this.minWavelength > this.wavelengths[0] ) {
+            if( this.absoluteMin > this.wavelengths[0] ) {
                 this.setWavelength('min', this.wavelengths[0]);
                 changed = true;
             }
-            if( this.maxWavelength < this.wavelengths[this.wavelengths.length-1] ) {
+            if( this.absoluteMax < this.wavelengths[this.wavelengths.length-1] ) {
                 this.setWavelength('max', this.wavelengths[this.wavelengths.length-1]);
                 changed = true;
             }
