--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ var restUrl = 'http://ecospectra.org?text=&filter='+query+'&start=0&stop=6';</co
       will be the value of 'sort' and the results will be in default order form the database.
   </li>
   <li>
-      <b>value</b> - array of objects each containign:<br />
+      <b>values</b> - array of objects each containign:<br />
 
       <ul>
         <li><b>key</b> - the sort value for this spectra</li>
